# Neural-Network

./: .gitignore  CMakeLists.txt  Makefile  Matrix.cpp  Matrix.h  MatrixException.h  NeuralNetwork.cpp
CPP/: CMakeLists.txt  install.bash
CPP/include/: MatrixException.h  NeuralNetwork.h  Util.h
CPP/src/: Matrix.cpp  NeuralNetwork.cpp
CPP/test/: CMakeLists.txt  NeuralNetworkTest.h
CUDA/: CMakeLists.txt  install.bash
CUDA/include/: NeuralNetwork.h  NeuralNetworkTypes.h  cuda_extension.h  helper_cuda.h
CUDA/src/: NeuralNetwork.cpp  cuda_extension.cu
CUDA/test/: CMakeLists.txt  NeuralNetworkTest.h  RunTests.cpp
TEXT_CONV/: CMakeLists.txt
TEXT_CONV/include/: NeuralNetwork.h  NeuralNetworkTypes.h
TEXT_CONV/src/: main.cpp
include/: Matrix.h  NeuralNetwork.h  NeuralNetworkTypes.h
src/: CMakeLists.txt  Matrix.cpp  NeuralNetwork.cpp
test/: CMakeLists.txt  MatrixTest.cpp  MatrixTest.h  NeuralNetworkTest.h  RunTests.cpp
